# CS7033-Animation-Interactive-Project

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md
resources/config/: log.ini  settings.lua
resources/shaders/: debugFS.glsl  materialFS.glsl  phongVS.glsl  phong_materialFS.glsl  phong_skinningVS.glsl  simpleVS.glsl  skinningVS.glsl  skyboxFS.glsl  skyboxVS.glsl  texture_d_FS.glsl  texture_ds_FS.glsl
src/: AABB.cpp  AABB.hpp  Animation.cpp  Animation.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Command.cpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  Control.cpp  Control.hpp  Curve.cpp  Curve.hpp  Enemy.cpp  Enemy.hpp  GameObject.cpp  GameObject.hpp  GameWorld.cpp  GameWorld.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Player.cpp  Player.hpp  SQTTransform.cpp  ShaderManager.cpp  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Timer.cpp  Timer.hpp  main.cpp  math_utilities.h  stdafx.h
